@@ -2,8 +2,55 @@ module Daru
   module Maths
     module Statistics
       module DataFrame
-        
-        
+        # Calculate mean of numeric vectors.
+        def mean
+                  
+        end
+
+        # Calculate standard deviation of numeric vectors.
+        def std
+          
+        end
+
+        # Calculate sum of numeric vectors
+        def sum
+          
+        end
+
+        # Count the number of non-nil values in each vector.
+        def count
+          
+        end
+
+        # Calculate the maximum value of each numeric vector.
+        def max
+          
+        end
+
+        # Calculate the minimmum value of each numeric vector.
+        def min
+          
+        end
+
+        # Create a summary of mean, standard deviation, count, max and min of 
+        # each numeric vector in the dataframe in one shot.
+        def describe
+          
+        end
+
+        # Calculate variance-covariance between the numeric vectors.
+        def covariance
+          
+        end
+
+        alias :cov :covariance
+          
+        # Calculate the correlation between the numeric vectors.
+        def correlation
+          
+        end
+
+        alias :corr :correlation
       end
     end
   end
